# lexpy

./: .codeclimate.yml  .coveragerc  .gitignore  .pre-commit-config.yaml  .travis.yml  README.md  README.md~  appveyor.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: lexpy_build.yaml
lexpy/: __init__.py  __main__.py  _base.py  _utils.py  dawg.py  exceptions.py  trie.py  utils.py
lexpy/_base/: automata.py  node.py
lexpy/tests/: test_dawg.py  test_trie.py  test_word_count.py
lexpy/tests/data/: OSPD2.txt  word4.txt  words100k.txt  words2.txt
