[metadata]
name = lexpy
version = 1.1.0
description = Python package for lexicon
long_description = file: README.md
long_description_content_type = text/markdown
keywords = trie, suffix-trees, lexicon, directed-acyclic-word-graph, dawg
url = https://github.com/aosingh/lexpy
license = GNU GPLv3
classifiers =
    'Development Status :: 5 - Production/Stable'
    'Intended Audience :: Education'
    'Intended Audience :: Developers'
    'Intended Audience :: Science/Research'
    'Topic :: Text Processing :: Linguistic'
    'Topic :: Text Processing :: Indexing'
    'License :: OSI Approved :: GNU General Public License v3 (GPLv3)'
    'Programming Language :: Python :: 3.7'
    'Programming Language :: Python :: 3.8'
    'Programming Language :: Python :: 3.9'
    'Programming Language :: Python :: 3.10'
    'Programming Language :: Python :: 3.11'
    'Programming Language :: Python :: 3.12'
    'Operating System :: POSIX :: Linux'
    'Operating System :: Unix'
    'Operating System :: Microsoft :: Windows'
    'Operating System :: MacOS'
author = Abhishek Singh
author_email = abhishek.singh20141@gmail.com
maintainer = Abhishek Singh
maintainer_email = abhishek.singh20141@gmail.com
project_urls =
    Documentation = https://github.com/aosingh/lexpy
    Source = https://github.com/aosingh/lexpy
    Bug Tracker = https://github.com/aosingh/lexpy/issues
    CI= https://github.com/aosingh/lexpy/actions
    Release Notes= https://github.com/aosingh/lexpy/releases
    License= https://github.com/aosingh/lexpy/blob/main/LICENSE


[options]
zip_safe = False
packages = find:
package_dir =
    lexpy=lexpy
include_package_data = True
python_requires = >=3.7

[options.packages.find]
where = lexpy
exclude = tests
